--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ping-pong",
+  "name": "github_user_lookup",
   "description": "",
   "main": "index.js",
   "license": "ISC",
@@ -13,7 +13,6 @@
   ],
   "dependencies": {
     "jquery": "^2.2.4",
-    "bootstrap": "^3.3.6",
-    "moment": "^2.13.0"
+    "bootstrap": "^3.3.6"
   }
 }
